# errata

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  errata.cabal  hie.yaml  stack.yaml
.github/workflows/: ci.yaml  publish.yaml
example/: Main.hs
src/: Errata.hs
src/Errata/: Render.hs  Source.hs  Styles.hs  Types.hs
src/Errata/Internal/: Render.hs
test/: ErrataSpec.hs
test/.golden/T000/: golden
test/.golden/T001/: golden
test/.golden/T002/: golden
test/.golden/T003/: golden
test/.golden/T004/: golden
test/.golden/T005/: golden
test/.golden/T006/: golden
test/.golden/T007/: golden
test/.golden/T008/: golden
test/.golden/T009/: golden
test/.golden/T010/: golden
test/.golden/T011/: golden
test/.golden/T012/: golden
test/.golden/T013/: golden
test/.golden/T014/: golden
test/.golden/T015/: golden
test/.golden/T016/: golden
test/.golden/T018/: golden
test/.golden/T020/: golden
test/.golden/T021/: golden
test/.golden/T022/: golden
test/.golden/T023/: golden
test/.golden/T024/: golden
test/.golden/T025/: golden
test/.golden/T026/: golden
test/.golden/T027/: golden
test/.golden/T028/: golden
test/.golden/T029/: golden
test/.golden/T030/: golden
test/.golden/T031/: golden
test/.golden/T032/: golden
test/.golden/T033/: golden
test/.golden/T034/: golden
test/.golden/T035/: golden
test/.golden/T036/: golden
test/.golden/T037/: golden
test/.golden/T038/: golden
test/.golden/T039/: golden
test/.golden/T040/: golden
test/.golden/T041/: golden
test/.golden/T042/: golden
test/.golden/T043/: golden
test/Errata/: StylesSpec.hs  TypesSpec.hs
