cabal-version: 2.4
name:          errata
version:       0.2.0.0
synopsis:      Source code error pretty printing
description:
    An extremely customizable error pretty printer that can handle many kinds of error formatting.
    It can handle errors that are connected, disconnected, and those spanning multiple lines.
    .
    You can get started by importing the "Errata" module.
homepage:      https://github.com/1Computer1/errata
bug-reports:   https://github.com/1Computer1/errata/issues
license:       MIT
license-file:  LICENSE
author:        comp
maintainer:    onecomputer00@gmail.com
copyright:     (c) 2020 comp
category:      Pretty Printer
build-type:    Simple
extra-doc-files:
    README.md
    CHANGELOG.md
tested-with:
    GHC == 9.0.1
  , GHC == 8.10.4
  , GHC == 8.8.4
  , GHC == 8.6.5

source-repository head
  type:     git
  location: https://github.com/1Computer1/errata.git

common common-options
  build-depends:
      base >= 4.12 && < 4.17
    , containers >= 0.6.0.1 && < 0.7
    , text >= 1.2.3.1 && < 1.3
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Wpartial-fields
      -Wno-unused-do-bind
  default-language: Haskell2010

library
  import:         common-options
  hs-source-dirs: src
  exposed-modules:
      Errata
      Errata.Internal.Render
      Errata.Source
      Errata.Types

test-suite errata-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
      ErrataSpec
    , Errata.TypesSpec
  build-depends:
      errata
    , hspec >= 2.7 && < 3
    , hspec-golden >= 0.1 && < 0.2
  build-tool-depends:
      hspec-discover:hspec-discover >= 2.7 && < 3
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N

executable errata-example
  import:         common-options
  hs-source-dirs: example
  main-is:        Main.hs
  build-depends:
      errata
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
