cabal-version: 2.4
name:          errata
version:       0.4.0.2
synopsis:      Source code error pretty printing
description:
    An extremely customizable error pretty printer that can handle many kinds of error formatting.
    It can handle errors that are connected, disconnected, and those spanning multiple lines.
    .
    You can get started by importing the "Errata" module.
homepage:      https://github.com/1Computer1/errata
bug-reports:   https://github.com/1Computer1/errata/issues
license:       MIT
license-file:  LICENSE
author:        comp
maintainer:    onecomputer00@gmail.com
copyright:     (c) 2020- comp
category:      Pretty Printer
build-type:    Simple
extra-doc-files:
    README.md
    CHANGELOG.md
tested-with:
    GHC == 9.2.8
  , GHC == 9.4.8
  , GHC == 9.6.6
  , GHC == 9.8.4
  , GHC == 9.10.1

source-repository head
  type:     git
  location: https://github.com/1Computer1/errata.git

flag usewcwidth
  description: Enable the use of wcwidth for character widths. If disabled, uses an incomplete premade version.
  default: False

common common-options
  build-depends:
      base >= 4.12 && < 4.21
    , containers >= 0.6 && < 0.8
    , text >= 1.2.3 && < 2.2
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Wpartial-fields
      -Wno-unused-do-bind
  default-language: Haskell2010

library
  import:         common-options
  hs-source-dirs: src
  exposed-modules:
      Errata
      Errata.Internal.Render
      Errata.Source
      Errata.Styles
      Errata.Types
  if flag(usewcwidth)
    cpp-options: -Dusewcwidth

test-suite errata-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
      ErrataSpec
    , Errata.StylesSpec
    , Errata.TypesSpec
  build-depends:
      errata
    , hspec >= 2.7 && < 3
    , hspec-golden >= 0.2 && < 0.3
  build-tool-depends:
      hspec-discover:hspec-discover >= 2.7 && < 3
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N

executable errata-example
  import:         common-options
  hs-source-dirs: example
  main-is:        Main.hs
  build-depends:
      errata
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
